--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "react-bootstrap": "^1.4.3",
     "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.7",
